welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:2: error: illegal start of simple expression
while (!estFaceMur())){
                     ^